--- a/modules/openapi-generator/src/main/resources/dart-jaguar/auth/auth.mustache
+++ b/modules/openapi-generator/src/main/resources/dart-jaguar/auth/auth.mustache
@@ -7,12 +7,12 @@ abstract class AuthInterceptor extends Interceptor {
      * Get auth information on given route for the given type
      * Can return null if type is not present on auth data or if route doesn't need authentication
      */
-    List<Map<String, dynamic>> getAuthInfo(RouteBase route, String type) {
+    List<Map<String, dynamic>> getAuthInfo(RouteBase route, String type, [String scheme]) {
         if (route.metadataMap.containsKey("auth")) {
             final auth = route.metadataMap["auth"];
             List<Map<String, dynamic>> results = [];
             for (var info in auth) {
-                if(info["type"] == type) {
+                if(info["type"] == type && info["scheme"] == scheme) {
                     results.add(info);
                 }
             }
