added the name of the Multipart parameter

--- a/modules/openapi-generator/src/main/resources/dart-jaguar/api.mustache
+++ b/modules/openapi-generator/src/main/resources/dart-jaguar/api.mustache
@@ -40,7 +40,7 @@ class {{classname}} extends ApiClient with _${{classname}}Client {
     {{#vendorExtensions}}
         {{#formParams}}
             {{#-first}}{{#hasQueryParams}},{{/hasQueryParams}}{{^hasQueryParams}}{{#hasHeaderParams}},{{/hasHeaderParams}}{{/hasQueryParams}}{{^hasQueryParams}}{{^hasHeaderParams}}{{#hasPathParams}},{{/hasPathParams}}{{/hasHeaderParams}}{{/hasQueryParams}}{{/-first}}
-            {{#isJson}}@AsJson() {{/isJson}}{{#isForm}}@AsFormField("{{baseName}}") {{/isForm}}{{#isMultipart}}@AsMultipartField() {{/isMultipart}}{{{dataType}}} {{paramName}}{{#hasMore}}, {{/hasMore}}
+            {{#isJson}}@AsJson() {{/isJson}}{{#isForm}}@AsFormField("{{baseName}}") {{/isForm}}{{#isMultipart}}@AsMultipartField("{{baseName}}") {{/isMultipart}}{{{dataType}}} {{paramName}}{{#hasMore}}, {{/hasMore}}
         {{/formParams}}
         {{#bodyParam}}
             {{#hasFormParams}},{{/hasFormParams}}{{^hasFormParams}}{{#hasQueryParams}},{{/hasQueryParams}}{{/hasFormParams}}{{^hasFormParams}}{{^hasQueryParams}}{{#hasHeaderParams}},{{/hasHeaderParams}}{{/hasQueryParams}}{{/hasFormParams}}{{^hasFormParams}}{{^hasQueryParams}}{{^hasHeaderParams}}{{#hasPathParams}},{{/hasPathParams}}{{/hasHeaderParams}}{{/hasQueryParams}}{{/hasFormParams}}
