[DartJaguar] added a missing package import for the model tests

--- a/modules/openapi-generator/src/main/resources/dart-jaguar/model_test.mustache
+++ b/modules/openapi-generator/src/main/resources/dart-jaguar/model_test.mustache
@@ -1,6 +1,7 @@
 {{#models}}
 {{#model}}
 
+import 'package:{{pubName}}/model/{{classFilename}}{{#protoFormat}}.pb{{/protoFormat}}.dart';
 import 'package:test/test.dart';
 
 // tests for {{classname}}
