--- a/modules/openapi-generator/src/main/resources/dart-jaguar/enum.mustache
+++ b/modules/openapi-generator/src/main/resources/dart-jaguar/enum.mustache
@@ -31,7 +31,7 @@ class {{classname}}FieldProcessor implements FieldProcessor<{{classname}}, {{dat
     }
 
     {{dataType}} serialize({{classname}} item) {
-        return item.value;
+        return item?.value;
     }
 }
 {{/jsonFormat}}
