support null values for enums

--- a/modules/openapi-generator/src/main/resources/dart-jaguar/enum.mustache
+++ b/modules/openapi-generator/src/main/resources/dart-jaguar/enum.mustache
@@ -20,6 +20,7 @@ class {{classname}}FieldProcessor implements FieldProcessor<{{classname}}, {{dat
     const {{classname}}FieldProcessor();
 
     {{classname}} deserialize({{dataType}} data) {
+        if( data == null ) return null;
         switch (data) {
         {{#allowableValues}}
             {{#enumVars}}
