--- a/modules/openapi-generator/src/main/resources/dart-jaguar/pubspec.mustache
+++ b/modules/openapi-generator/src/main/resources/dart-jaguar/pubspec.mustache
@@ -5,6 +5,7 @@ environment:
     sdk: ">=2.0.0 <3.0.0"
 dependencies:
     jaguar_retrofit: ^2.8.8
+    equatable: ^1.2.5
 {{#jsonFormat}}
     jaguar_serializer: ^2.2.12
 {{/jsonFormat}}
